fix: overflow error

--- a/frontend/src/components/Admin/admin.css
+++ b/frontend/src/components/Admin/admin.css
@@ -1,7 +1,3 @@
-.sidebar-nav {
-  width: 270px;
-}
-
 .btns {
   color: rgb(255, 255, 255) !important ;
   width: 90%;
@@ -45,7 +41,6 @@ label {
   width: 100%;
   height: 2rem;
   border: none;
-
   transition: all 0.5s;
   padding: 0 10px;
   color: #ffff;
@@ -75,6 +70,12 @@ label {
   width: 100%;
 }
 
+.sidebar-nav {
+  width: 270px;
+}
+.modal-backdrop.show {
+  opacity: 0;
+}
 @media screen and (max-width: 580px) {
   .order-details-item {
     flex-direction: column;
